kubernetes/catalog/postgresql17/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: postgresql17
  namespace: postgresql17
  labels:
    app.kubernetes.io/name: postgresql17
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`postgresql17.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: postgresql17
          port: 5432
  tls:
    secretName: int-rlservers-com-tls
